[package]
name = "casbin-types"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
description = "The types for casbin-raft."
repository = "https://github.com/psiace/casbin-types"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http        = "^0.2"
thiserror   = "^1.0"
serde       = "^1.0"
serde_json  = "^1.0"
casbin     = "^1.0"
dashmap     = { version = "^3", features = ["serde"] }
slog        = "^2.5"

[dependencies.tonic]
version  = "^0.2"
optional = true

[dependencies.hyper]
version  = "^0.13"
optional = true

[features]
default      = ["extra-errors"]
extra-errors = ["tonic", "hyper"]
